Bug 122429 - FILESAVE: Header/Footer are gone in MS Office
Summary: FILESAVE: Header/Footer are gone in MS Office
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.beta1+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:6.3.0 target:6.2.0.2
Keywords: bibisected, bisected, filter:doc, regression
Depends on:
Blocks: DOC-Header-Footer
  Show dependency treegraph
 
Reported: 2019-01-02 16:04 UTC by Xisco Faulí
Modified: 2022-01-06 14:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
section_losesHeaderFooterInWord.odt: clean-room minimal reproducer (9.25 KB, application/vnd.oasis.opendocument.text)
2019-01-04 08:55 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-01-02 16:04:04 UTC
Steps to reproduce:
1. Open attachment 99140 [details] from bug 78772
2. Save it as .DOC
3. Open the output file in MSO.

-> Header and Footer are gone

Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: 49c61f660d05ab13140d4349a0b3f6efba742022
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2019-01-02 16:05:23 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3955e5efc225b184b9507db94c226c031a602168

author	Justin Luth <justin.luth@collabora.com>	2018-10-18 11:44:11 +0300
committer	Justin Luth <justin_luth@sil.org>	2018-10-31 05:00:21 +0100
commit 3955e5efc225b184b9507db94c226c031a602168 (patch)
tree 7154c64e3f0518d583e01528fb55ff5acb62b289
parent dc2509bca4f503c11cdde16779363a5aae67185f (diff)
writerfilter: implement formprot

Bisected with: bibisect-linux64-6.2

Adding Cc: to Justin Luth
Comment 2 Xisco Faulí 2019-01-03 20:35:40 UTC
attachment 98466 [details] from bug 78292 is another file affected by the same problem
Comment 3 Justin L 2019-01-04 08:55:58 UTC
Created attachment 147990 [details]
section_losesHeaderFooterInWord.odt: clean-room minimal reproducer

This one does not depend on protection being enabled, just a section. It shows that under the right circumstances, this has been true since OOo, where LO still sees the header/footer, but Word 2003 does not. Enabling protection just triggered the right condition.
Comment 4 Commit Notification 2019-01-07 18:49:07 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/0a6c609bdc89dd0317d3f5013c13d85d50d30669%5E%21

tdf#122429/tdf#122431 ww8export: export H/F to default section

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2019-01-08 14:36:20 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 31c1995037a7ad408a5af6917288d8e3888a472d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Justin Luth, Thanks for fixing this!!
Comment 6 Commit Notification 2019-01-08 21:54:45 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/73c7b0414679c002cd925ead8018837dd39eaf86%5E%21

tdf#122429/tdf#122431 ww8export: export H/F to default section

It will be available in 6.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Timur 2020-10-20 11:18:03 UTC
*** Bug 44063 has been marked as a duplicate of this bug. ***
Comment 8 Justin L 2022-01-06 14:20:35 UTC
(In reply to Commit Notification from comment #4)
> Justin Luth committed a patch related to this issue.
> It has been pushed to "master":
> 
> https://git.libreoffice.org/core/+/
> 0a6c609bdc89dd0317d3f5013c13d85d50d30669%5E%21
> 
> tdf#122429/tdf#122431 ww8export: export H/F to default section
> 
> It will be available in 6.3.0.

This doesn't seem to be necessary any more. It was reverted in 7.4 because of bug 146498