tdf#122429/tdf#122431 ww8export: export H/F to default section

Just like bug 121374 for DOCX, which was just fixed in LO62,
DOC apparently also sometimes can miss out on headers and footers.

It wouldn't be terrible to duplicate headers/footers
unnecessarily, but it is terrible to have them disappear.
If the last SectPr has no idea about the section start,
it can't know whether it is continuous or started with
a page break. In that case, just ensure that the
header and footer are explicitly written out.

RTF continues to work without this in all known cases.

Change-Id: I93f2b08535a3548c0a9e9bcdb6ee2cd965dc8367